# Game-of-life

./: .gitignore  CMakeLists.txt  main.cpp
Game/: Game.cpp  Game.h
Settings/: Settings.cpp  Settings.h
controller/: GridController.cpp  GridController.h
logic/: Grid.cpp  Grid.h
logic/FieldSnapshot/: FieldSnapshot.cpp  FieldSnapshot.h
logic/cell/: cell.cpp  cell.h
ui/GameWidget/: gamewidget.cpp  gamewidget.h
ui/MainWindow/: mainwindow.cpp  mainwindow.h
ui/Window/: application.cpp  application.h  application.ui
ui/field/: gamefield.cpp  gamefield.h
